--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
   text-decoration: none;
   outline: none;
   border: none;
-  text-transform: capitalize;
   transition: all 0.2s linear;
 }
 html {
@@ -34,10 +33,10 @@ html::-webkit-scrollbar {
   width: 0.8rem;
 }
 html::-webkit-scrollbar-track {
-  background: rgb(235, 202, 245);
+  background: #7f94a8;
 }
 html::-webkit-scrollbar-thumb {
-  background: #420177;
+  background: #00264d;
 }
 
 /* pre loader start */
@@ -306,21 +305,6 @@ header .navbar ul li a:hover {
   color: #fff;
   background-color: #0685da;
 }
-.social-icons a.github:hover {
-  background-color: #0e0e0e;
-}
-.social-icons a.twitter:hover {
-  background-color: #00aced;
-}
-.social-icons a.linkedin:hover {
-  background-color: #007bb6;
-}
-.social-icons a.dev:hover {
-  background-color: #070707;
-}
-.social-icons a.instagram:hover {
-  background-color: #ee00da;
-}
 /* social icons end */
 
 /* hero media queries starts*/
@@ -347,6 +331,8 @@ header .navbar ul li a:hover {
 /* about section starts */
 .about {
   background: rgb(255, 255, 255);
+
+  min-height: 70vh;
 }
 .about .row {
   display: flex;
@@ -355,43 +341,29 @@ header .navbar ul li a:hover {
   flex-wrap: wrap;
   padding: 4rem;
 }
-.about .row .image {
-  text-align: center;
-  flex: 1 1 35rem;
-}
-.about .row .image img {
-  margin: 4rem;
-  width: 30rem;
-  height: auto;
-  border-radius: 5%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
-  mix-blend-mode: luminosity;
-  transition: 0.3s;
-  cursor: pointer;
-}
-.about .row .image img:hover {
-  mix-blend-mode: normal;
-}
 .about .row .content {
   flex: 1 1 45rem;
   padding: 3rem;
 }
 .about .row .content h3 {
-  color: rgb(27, 27, 27);
-  font-size: 2.5rem;
+  color: #151463;
+  font-size: 2.8rem;
+  text-align: center;
 }
 .about .row .content .tag {
-  font-size: 1.4rem;
-  color: #020133;
+  font-size: 1.5rem;
+  color: #151463;
   font-weight: 600;
   margin-top: 1rem;
+  text-align: center;
 }
 .about .row .content p {
-  font-size: 1.5rem;
-  margin-top: 1.5rem;
+  font-size: 2rem;
+  margin-top: 3rem;
   font-family: "Nunito";
   font-weight: 600;
   text-transform: none;
+  text-align: justify;
 }
 .about .row .content .box-container {
   display: flex;
@@ -461,7 +433,7 @@ header .navbar ul li a:hover {
 /* skills section starts */
 .skills {
   min-height: 90vh;
-  background: linear-gradient(to bottom, #57059e, #4a00e0);
+  background: linear-gradient(to bottom, #00264d, #00498d);
 }
 .skills h2 {
   color: #fff;
@@ -511,12 +483,17 @@ header .navbar ul li a:hover {
 }
 
 .skills .container .bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 15px;
   padding: 10px;
   border-radius: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   background: rgba(0, 0, 22, 0.9);
   transition: 0.2s;
+  text-align: center;
 }
 
 .skills .container .bar:hover {
@@ -529,6 +506,7 @@ header .navbar ul li a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   margin-top: 1rem;
 }
@@ -568,13 +546,6 @@ header .navbar ul li a:hover {
 .education {
   background: #e5ecfb;
   min-height: 80vh;
-}
-.education .qoute {
-  font-size: 1.5rem;
-  text-align: center;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  margin-top: 0.5rem;
 }
 .education .box-container {
   display: flex;
@@ -632,12 +603,13 @@ header .navbar ul li a:hover {
   text-align: left;
 }
 .education h4 {
-  font-size: 2rem;
-  color: rgb(34, 109, 0);
+  font-size: 1.5rem;
+  color: #aa6107;
   text-align: left;
+  font-style: italic;
   margin: 1rem;
   font-family: "Nunito", sans-serif;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 /* education media queries starts*/
@@ -673,17 +645,21 @@ header .navbar ul li a:hover {
 
 /* Work section styles */
 .work {
-  background: linear-gradient(to bottom, #000031, #00002c);
+  background: linear-gradient(to bottom, #00264d, #00498d);
   position: relative;
   overflow: hidden;
   padding-bottom: 5rem;
+}
+
+.work .heading {
+  color: #ffffff;
 }
 
 .work .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 3rem;
-  margin: 2rem;
+  margin: 7rem;
   position: relative;
   z-index: 1;
 }
@@ -816,11 +792,15 @@ header .navbar ul li a:hover {
 /* work section ends */
 
 /* experience section starts */
-.experience .timeline {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
+
+.experience {
+  min-height: 90vh;
 }
+
+.experience .timeline {
+  margin-top: 8rem;
+}
+
 .experience .timeline::after {
   content: "";
   position: absolute;
@@ -828,169 +808,137 @@ header .navbar ul li a:hover {
   background: #020133;
   top: 0;
   bottom: 0;
-  left: 50%;
-  margin-left: -3px;
-  z-index: -2;
+  left: 40px;
+  z-index: -1;
 }
+
 .experience .container {
-  padding: 10px 40px;
+  width: 100%;
+  padding-left: 8rem;
   position: relative;
-  background-color: inherit;
-  width: 50%;
 }
-/*circles on timeline*/
+.experience .container.right {
+  left: 0; /* Align everything left */
+}
+
+.experience .container::before {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 65px; /* match padding-left in .container */
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 15px solid #2b2a2a; /* matches box background */
+  z-index: 2;
+}
+
 .experience .container::after {
   content: "\f0b1";
   position: absolute;
   width: 25px;
   height: 25px;
-  right: -17px;
-  background-color: rgb(255, 255, 255);
+  left: 27px; /* center on the line */
+  background-color: white;
   border: 4px solid #ff9f55;
   top: 15px;
   border-radius: 50%;
   z-index: 100;
-  font-size: 1.89rem;
+  font-size: 1.4rem;
   text-align: center;
-  font-weight: 600;
+  line-height: 25px;
+  font-weight: 900;
   color: #02094b;
-  font-family: "Font Awesome\ 5 Free";
-}
-.experience .left {
-  left: 0;
-}
-.experience .right {
-  left: 50%;
-}
-/* arrows pointing right */
-.experience .left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid #f68c09;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #f68c09;
-}
-/* arrows pointing left  */
-.experience .right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid #f68c09;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent #f68c09 transparent transparent;
-}
-.experience .right::after {
-  left: -16px;
-}
-.experience .content {
-  background-color: #f68c09;
-  position: relative;
-  border-radius: 6px;
-}
-.experience .content .tag {
-  font-size: 1.3rem;
-  padding-top: 1.5rem;
-  padding-left: 1.5rem;
-}
-.experience .content .desc {
-  margin-left: 1.5rem;
-  padding-bottom: 1rem;
-}
-.experience .content .desc h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-.experience .content .desc p {
-  font-size: 1.2rem;
-}
-/* view all button */
-.morebtn {
-  display: flex;
-  justify-content: center;
-}
-.morebtn .btn {
-  position: relative;
-  line-height: 0;
-  padding: 1.6rem 3rem;
-  border-radius: 0.5em;
-  transition: 0.5s;
-  color: #fff;
-  background: #2506ad;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
-  text-align: center;
-}
-.morebtn .btn span {
-  font-weight: 600;
-  font-size: 1.7rem;
-  font-family: "Nunito", sans-serif;
-}
-.morebtn .btn i {
-  margin-left: 0.3rem;
-  font-size: 1.5rem;
-  transition: 0.3s;
-}
-.morebtn .btn:hover {
-  background: #1a047e;
-}
-.morebtn .btn:hover i {
-  transform: translateX(5px);
+  font-family: "Font Awesome 5 Free";
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  .experience {
-    min-height: 80vh;
-  }
-  .experience .timeline {
-    margin-top: 2rem;
-  }
-  .experience .timeline::after {
-    left: 31px;
-  }
-  .experience .container {
-    width: 100%;
-    padding-left: 8rem;
-    padding-right: 2rem;
-  }
-  .experience .container::after {
-    font-size: 2.2rem;
-  }
-  .experience .container::before {
-    left: 61px;
-    border: medium solid #f68c09;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent #f68c09 transparent transparent;
-  }
-  .experience .left::after {
-    left: 15px;
-  }
-  .experience .right::after {
-    left: 15px;
-  }
-  .experience .right {
-    left: 0%;
-  }
-  .morebtn {
-    margin-top: 3rem;
-  }
+/* Enlarge the content box */
+.experience .content {
+  padding: 8rem;
+  border-radius: 10px;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
+
+.experience-content {
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
+  margin-left: 0; /* Remove any default margin */
+  padding-left: 0; /* Remove any default padding */
+}
+
+.experience-details {
+  flex: 1;
+}
+
+.description {
+  margin-top: 1.5rem;
+  line-height: 1.6;
+}
+
+.timeline-image-left {
+  width: 150px;
+  height: 60px;
+  object-fit: cover;
+  margin-top: 0px; /* Adjust as needed */
+  margin-left: -3rem; /* Remove any left margin */
+  margin-right: 0.25rem; /* Add small spacing between logo and text */
+}
+
+.timeline-image-right {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  top: 15px;
+  right: 15px;
+}
+
+.tag h2 {
+  margin-bottom: 0.5rem;
+  font-size: 2rem;
+}
+
+.desc p {
+  font-size: 50 rem;
+}
+
+.desc h3,
+.desc p {
+  margin: 0.3rem 0;
+}
+
+.description p {
+  font-size: 1.4rem;
+  margin-right: 29rem;
+  text-align: justify;
+}
+
+.experience .timeline-image-left {
+  top: 0px;
+  left: 5px;
+}
+
+.experience .timeline-image-right {
+  top: 50px;
+  right: 30px;
+}
+
 /* experience media queries ends */
 /* experience section ends */
 
 /* Certifications section */
 .certifications {
-  background: linear-gradient(to bottom, #061d3f, #061d3f);
+  background: linear-gradient(to bottom, #00264d, #00498d);
   min-height: 60vh;
   padding: 5rem 9%;
+}
+
+.certifications .heading {
+  color: #ffffff;
 }
 
 .cert-container {
@@ -1047,8 +995,8 @@ header .navbar ul li a:hover {
 }
 
 .cert-card {
-  min-width: 350px;
-  height: 250px;
+  min-width: 330px;
+  height: 255px;
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -1118,7 +1066,7 @@ header .navbar ul li a:hover {
   text-decoration: none;
   transition: all 0.3s ease;
   display: inline-block;
-  margin-top: 2rem;
+  margin-top: 0rem;
 }
 
 .verify-btn:hover {
@@ -1174,7 +1122,7 @@ header .navbar ul li a:hover {
   width: 100%;
   background: #fff;
   border-radius: 1.5rem;
-  margin: 2rem 19rem;
+  margin: 2rem 25rem;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
 }
 .contact .container .content {
