--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1205,8 +1205,8 @@ header .navbar ul li a:hover {
 }
 
 .cert-card {
-  /*width: 330px;
-  height: 255px;*/
+  width: 330px;
+  height: 255px;
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -1288,6 +1288,47 @@ header .navbar ul li a:hover {
 }
 
 /* Responsive styles */
+
+@media (max-width: 450px) {
+  .cert-card {
+    width: 150px;
+    height: 190px;
+  }
+
+  .cert-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    transition: all 0.3s ease;
+    object-position: center;
+    /*background-color: #ffffff;*/
+  }
+
+  .cert-overlay {
+    padding: 1rem; /* Minimal padding */
+  }
+
+  .cert-title {
+    font-size: 1.4rem;
+    margin-bottom: 0.3rem;
+  }
+
+  .cert-institute {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .cert-date {
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .verify-btn {
+    padding: 0.6rem 1.5rem;
+    font-size: 1.1rem;
+  }
+}
+
 @media (max-width: 768px) {
   .certifications {
     padding: 3rem 5%;
@@ -1323,37 +1364,6 @@ header .navbar ul li a:hover {
   .verify-btn {
     padding: 0.7rem 1.8rem;
     font-size: 1.2rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .cert-card {
-    min-width: 125px; /* Nearly full width */
-    height: 190px;
-  }
-
-  .cert-overlay {
-    padding: 1rem; /* Minimal padding */
-  }
-
-  .cert-title {
-    font-size: 1.4rem;
-    margin-bottom: 0.3rem;
-  }
-
-  .cert-institute {
-    font-size: 1.1rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .cert-date {
-    font-size: 0.9rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .verify-btn {
-    padding: 0.6rem 1.5rem;
-    font-size: 1.1rem;
   }
 }
 
